--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ glam = "0.30.3"
 gltf = "1.4.1"
 crossbeam = "0.8.4"
 crossbeam-channel = "0.5.15"
+crossbeam-utils = "0.8.21"
 rayon = "1.10.0"
 image = "0.25.6"
+boxcar = "0.2.13"
