--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,9 @@ ordered-float = "5.0.0"
 
 [profile.shipping]
 inherits = "release"
+opt-level = 3
+lto = "fat"
 codegen-units = 1
-lto = true
-
-[build]
-rustflags = ["-C", "target-cpu=native"]
+panic = "abort"
+strip = true
+debug = false
