--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 glam = "0.30.3"
 gltf = "1.4.1"
 image = "0.25.6"
-pixels = "0.15.0"
+pixels = { git = "https://github.com/mdesmedt/pixels.git", branch = "scalingmode" }
 winit = "0.30.11"
 crossbeam = "0.8.4"
 crossbeam-channel = "0.5.15"
