--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 glam = "0.30.3"
-gltf = "1.4.1"
+gltf = { version = "1.4.1", features = ["KHR_materials_transmission"] }
 image = "0.25.6"
 pixels = { git = "https://github.com/mdesmedt/pixels.git", branch = "scalingmode" }
 winit = "0.30.11"
