--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,10 @@ crossbeam-channel = "0.5.15"
 rayon = "1.11.0"
 boxcar = "0.2.14"
 ordered-float = "5.1.0"
-parry3d = "0.24.0"
+bvh = "0.11.0"
 clap = { version = "4.5.60", features = ["derive"] }
 dashmap = "6.1.0"
+nalgebra = "0.33.2"
 
 [profile.profiling]
 inherits = "release"
