--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ bvh = "0.11.0"
 clap = { version = "4.5.60", features = ["derive"] }
 dashmap = "6.1.0"
 nalgebra = "0.33.2"
+brotli = "8.0.2"
 
 [profile.profiling]
 inherits = "release"
